--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,12 +14,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:gravity="center"
-      android:text="@string/hello_blank_fragment" />
-
+      android:overScrollMode="never"
+      android:scrollbars="none" />
   </FrameLayout>
 </layout>
