feat: Add mvrx, ViewBindingDelegate.kt

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools">
-
-  <data>
-
-    <variable
-      name="viewModel"
-      type="io.github.ovso.githubusers.ui.main.MainViewModel" />
-  </data>
-
-  <androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:overScrollMode="never"
-    android:scrollbars="none"
-    tools:context=".ui.main.MainFragment" />
-</layout>
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:overScrollMode="never"
+  android:scrollbars="none"
+  tools:context=".ui.main.MainFragment" />
