--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,9 +4,10 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:orientation="vertical"
   android:overScrollMode="never"
   android:scrollbars="none"
-  app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+  app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
   app:spanCount="2"
   tools:context=".ui.main.MainFragment"
   tools:listitem="@layout/item_main" />
